compiler/testData/diagnostics/tests/inference/kt45461_25.diag.txt
/kt45461_25.kt:11:34: error: type argument for a type parameter S can't be inferred because it has incompatible upper bounds: String, K, Float
    val x: Float = Bar<String>().takeFoo(foo) // error in 1.3.72, no error in 1.4.31
                                 ^
